--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -20,6 +20,13 @@
     <title>Carrito</title>
   </head>
   <body>
+    <div class="column">
+      <div class="row">
+        <h2>Catálogo:</h2>
+        <div id="catalogo" class="catalogo"></div>
+      </div>
+    </div>
+
     <div id="menu"></div>
 
     <div id="container">
