sistema de borrado + botones

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Carrito</title>
+    <title>Historial de compras</title>
   </head>
   <body>
     <div class="column">
