--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Historial de compras</title>
+    <title>Carrito</title>
   </head>
   <body>
     <div class="column">
@@ -30,7 +30,7 @@
     <div id="menu"></div>
 
     <div id="container">
-      <h2>Su carrito:</h2>
+      <h2>Su historial:</h2>
       <div class="carrito">
         <div class="carta"></div>
       </div>
