--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -35,6 +35,7 @@
         <div class="carta"></div>
       </div>
     </div>
+    <div id="historial"></div>
     <div id="fin"></div>
 
     <!--javascript-->
@@ -54,6 +55,8 @@
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
     <script src="class.js"></script>
   </body>
