--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -58,6 +58,6 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
-    <script src="class.js"></script>
+    <script src="./js/class.js"></script>
   </body>
 </html>
