--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -31,9 +31,7 @@
 
     <div id="container">
       <h2>Su historial:</h2>
-      <div class="carrito">
-        <div class="carta"></div>
-      </div>
+      <div class="carrito"></div>
     </div>
     <div id="historial"></div>
     <div id="fin"></div>
