--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -15,28 +15,22 @@
 
     <!---link estilos-->
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <title>Carrito</title>
   </head>
   <body>
-    <div class="column">
-      <div class="row">
-        <h2>Catálogo:</h2>
-        <div id="catalogo" class="catalogo"></div>
-      </div>
-    </div>
+    <h2>Catálogo:</h2>
+    <div id="catalogo" class="catalogo"></div>
 
     <div id="menu"></div>
 
-    <div id="container">
-      <h2>Su historial:</h2>
-      <div class="carrito"></div>
-    </div>
+    <h2>Su historial:</h2>
+    <div class="carrito"></div>
+
     <div id="historial"></div>
     <div id="fin"></div>
 
-    <!--javascript-->
     <!--boostrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -54,8 +48,11 @@
       crossorigin="anonymous"
     ></script>
 
+    <!--javascript-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
     <script src="./js/class.js"></script>
+
+    <script src="./js/src.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
