--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -25,8 +25,14 @@
 
     <div id="menu"></div>
 
+    <div id="shopping_cart">aca uestro el carrito</div>
+    <div id="eventos">
+      aca si tiene usficientes puede armar un arreglo floral
+    </div>
+    <div id="pago">aca para elegir metood de pago</div>
+
     <h2>Su historial:</h2>
-    <div class="carrito"></div>
+    <div id="carrito" class="carrito"></div>
 
     <div id="historial"></div>
     <div id="fin"></div>
