--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -31,7 +31,7 @@
     </div>
     <div id="pago">aca para elegir metood de pago</div>
 
-    <h2>Su historial:</h2>
+    <h2>Su carrito:</h2>
     <div id="carrito" class="carrito"></div>
 
     <div id="historial"></div>
@@ -58,7 +58,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./js/class.js"></script>
 
-    <script src="./js/src.js"></script>
+    <script src="./js/catalogo.js"></script>
+    <script src="./js/carrito.js"></script>
+    <script src="./js/otros.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
