--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -32,6 +32,7 @@
     <div id="pago">aca para elegir metood de pago</div>
 
     <h2>Su carrito:</h2>
+    <div id="boton_carrito"></div>
     <div id="carrito" class="carrito"></div>
 
     <div id="historial"></div>
