--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -20,16 +20,11 @@
     <title>Carrito</title>
   </head>
   <body>
+    <div class="row"></div>
     <h2>Catálogo:</h2>
     <div id="catalogo" class="catalogo"></div>
 
     <div id="menu"></div>
-
-    <div id="shopping_cart">aca uestro el carrito</div>
-    <div id="eventos">
-      aca si tiene usficientes puede armar un arreglo floral
-    </div>
-    <div id="pago">aca para elegir metood de pago</div>
 
     <h2>Su carrito:</h2>
     <div id="boton_carrito"></div>
@@ -56,7 +51,12 @@
     ></script>
 
     <!--javascript-->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./js/data/data.json"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/class.js"></script>
 
     <script src="./js/catalogo.js"></script>
