--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -20,19 +20,20 @@
     <title>Carrito</title>
   </head>
   <body>
-    <div class="row"></div>
-    <h2>Catálogo:</h2>
-    <div id="catalogo" class="catalogo"></div>
+    <div class="column">
+      <div class="row"></div>
+      <h2>Catálogo de flores:</h2>
+      <div id="catalogo" class="catalogo"></div>
 
-    <div id="menu"></div>
+      <div id="menu"></div>
 
-    <h2>Su carrito:</h2>
-    <div id="boton_carrito"></div>
-    <div id="carrito" class="carrito"></div>
+      <h2>Su arreglo actual:</h2>
+      <div id="boton_carrito"></div>
+      <div id="carrito" class="carrito"></div>
 
-    <div id="historial"></div>
-    <div id="fin"></div>
-
+      <div id="historial"></div>
+      <div id="fin"></div>
+    </div>
     <!--boostrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
