--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!---font-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Estonia&family=Hind+Siliguri&family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500&family=Nunito:wght@200&family=PT+Sans+Narrow&family=Saira+Condensed:wght@200&family=Zen+Kurenaido&display=swap"
+      rel="stylesheet"
+    />
+
     <!--link boostrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -20,19 +26,21 @@
     <title>Carrito</title>
   </head>
   <body>
-    <div class="column">
-      <div class="row"></div>
-      <h2>Catálogo de flores:</h2>
-      <div id="catalogo" class="catalogo"></div>
+    <div class="container" id="container">
+      <div class="col">
+        <div class="row"></div>
+        <h2>¡Arme su arreglo floral!</h2>
+        <div id="catalogo" class="catalogo"></div>
 
-      <div id="menu"></div>
+        <div id="menu"></div>
 
-      <h2>Su arreglo actual:</h2>
-      <div id="boton_carrito"></div>
-      <div id="carrito" class="carrito"></div>
+        <h2>Su arreglo actual:</h2>
+        <div id="boton_carrito"></div>
+        <div id="carrito" class="carrito"></div>
 
-      <div id="historial"></div>
-      <div id="fin"></div>
+        <div id="historial"></div>
+        <div id="fin"></div>
+      </div>
     </div>
     <!--boostrap-->
     <script
